<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/home_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="150dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:background="@drawable/rounded_corners_white"
            android:padding="10dp"
            android:contentDescription="@string/bicycle"
            android:src="@drawable/round_motorcycle"
            android:onClick="makeARequest"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:background="@drawable/rounded_corners_white"
            android:padding="10dp"
            android:contentDescription="@string/van"
            android:src="@drawable/round_directions_bus" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:background="@drawable/rounded_corners_white"
            android:padding="10dp"
            android:contentDescription="@string/sedan"
            android:src="@drawable/round_directions_car" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:background="@drawable/rounded_corners_white"
            android:padding="10dp"
            android:contentDescription="@string/suv"
            android:src="@drawable/round_local_shipping" />


    </FrameLayout>

</FrameLayout>