<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeAnOrderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:text="Make an Order"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_black"
            android:drawableStart="@drawable/round_timer"
            android:drawablePadding="20dp"
            android:hint="@string/time"
            android:inputType="time"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="15dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="15dp"
            android:textColor="#C0C0C0"
            android:textColorHint="#C0C0C0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_black"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="20dp"
            android:hint="@string/date"
            android:inputType="date"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="15dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="15dp"
            android:textColor="#C0C0C0"
            android:textColorHint="#C0C0C0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_black"
            android:drawableStart="@drawable/round_map"
            android:drawablePadding="20dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="15dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="15dp"
            android:textColor="#C0C0C0"
            android:textColorHint="#C0C0C0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corners_black"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="20dp"
            android:hint="@string/car_licence_plate"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingTop="15dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="15dp"
            android:textColor="#C0C0C0"
            android:textColorHint="#C0C0C0" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="25sp"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_corners_black"
                android:textAllCaps="false" />

        </FrameLayout>

    </LinearLayout>


</FrameLayout>